--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-  "name": "calc_sun_azumuth",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@class90431/calc-sun-position",
+  "version": "1.0.2",
+  "description": "calculate sun azimuth & elevation",
   "main": "index.js",
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
-    "start": "npm run build:live",
-    "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Zack_Hsu",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^14.14.16",
-    "@types/suncalc": "^1.8.0",
-    "nodemon": "^2.0.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "moment": "^2.29.1",
-    "suncalc": "^1.8.0"
-  }
+  "author": "Zack Hsu",
+  "license": "MIT"
 }
